Дополнительные изменения от 04.10.2021

--- a/catalog.html
+++ b/catalog.html
@@ -12,6 +12,9 @@
             <nav class="navigation">
                 <form action="#" method="get" name="search"><input type="search" name="search" placeholder="Поиск по сайту" />Поиск по сайту<input type="submit" value="Найти" /></form>
                 <ul class="navigation-user">
+                  <li class="navigation-item">
+                    <a class="navigation-link" href="#">Коля Петухов</a>
+                </li>
                     <li class="navigation-item">
                         <a class="navigation-link" href="#">Войти</a>
                     </li>
