--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 
     <body>
         <header class="main-header">
-          <a class="device-logo" href="index.html">
-            <img class="logo" src="index.html" alt="Логотип Мазагина «Девайс»" />
+            <a class="device-logo" href="index.html">
+                <img class="logo" src="#" alt="Логотип Мазагина «Девайс»" />
             </a>
             <nav class="navigation">
-              <form action="#" method="get" name="search">
-                <input type="search" name="search" placeholder="Поиск по сайту" />Поиск по сайту<input type="submit" value="Найти">
-              </form>
+                <form action="https://echo.htmlacademy.ru" method="get" name="search"><input type="search" name="finder" placeholder="Поиск по сайту" required />Поиск по сайту<input type="submit" value="Найти" /></form>
                 <ul class="navigation-user">
                     <li class="navigation-item">
                         <a class="navigation-link" href="#">Войти</a>
@@ -27,15 +25,15 @@
                         <a class="navigation-link" href="#">Корзина</a>
                     </li>
                 </ul>
-            <div class="catalog-products">
-                    <a class="catalog">Каталог товаров</a>
-                        <a class="virtual">Виртуальная реальность</a>
-                        <a class="monopods">Моноподы для селфи</a>
-                        <a class="action Cameras">Экшн-камеры</a>
-                        <a class="fitness bracelets">Фитнес-браслеты</a>
-                        <a class="smart watch">Умные часы</a>
-                        <a class="quadrocopters">Квадрокоптеры</a>
-             </div>
+                <a class="catalog">Каталог товаров</a>
+                <div class="catalog-products">
+                    <a class="catalog-element" href="#">Виртуальная реальность</a>
+                    <a class="catalog-element" href="#">Моноподы для селфи</a>
+                    <a class="catalog-element" href="#">Экшн-камеры</a>
+                    <a class="catalog-element" href="#">Фитнес-браслеты</a>
+                    <a class="catalog-element" href="#">Умные часы</a>
+                    <a class="catalog-element" href="#">Квадрокоптеры</a>
+                </div>
                 <ul class="navigation-services">
                     <li class="navigation-item">
                         <a class="navigation-link" href="#">Доставка</a>
@@ -55,7 +53,7 @@
             <h1 class="visually-hidden">Магазин "Девайс"</h1>
             <section class="bestsellers">
                 <h2 class="visually-hidden">Хиты продаж</h2>
-                <img class="slider-image" src="#" alt="Хиты продаж" />
+
                 <button class="slider-button slider-prev" type="button">
                     <span class="visually-hidden">Предыдущий слайд</span>
                 </button>
@@ -65,51 +63,58 @@
                 <a class="button button-detail" href="#">Подробнее</a>
                 <ol class="slider-pagination">
                     <li class="slider-pagination-item">
+                        <img class="slider-image" src="#" alt="квадрокоптер" />
                         <button class="slider-pagination-button slider-pagination-button-current pagination-active" type="button">
                             <span class="visually-hidden">1 слайд</span>
                         </button>
                     </li>
 
                     <li class="slider-pagination-item">
+                        <img class="slider-image" src="#" alt="фитнес-браслет" />
                         <button class="slider-pagination-button slider-pagination-button-current" type="button">
                             <span class="visually-hidden">2 слайд</span>
                         </button>
                     </li>
 
                     <li class="slider-pagination-item">
+                        <img class="slider-image" src="#" alt="селфи-палка" />
                         <button class="slider-pagination-button slider-pagination-button-current" type="button">
                             <span class="visually-hidden">3 слайд</span>
                         </button>
                     </li>
                 </ol>
                 <div class="slide-description">
+                  <h3 class="slider-number">01</h3>
                     <h3 class="phrase">Порхает как бабочка,жарит как пчела!</h3>
                     <p class="description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
                     <div class="specifications">
-                    <span class="option">Дальность полета</span>
-                    <span class="option-value">800 м</span>
-                    <span class="option">Радиус поражения</span>
-                    <span class="option-value">50 м</span>
+                        <span class="option">Дальность полета</span>
+                        <span class="option-value">800 м</span>
+                        <span class="option">Радиус поражения</span>
+                        <span class="option-value">50 м</span>
                     </div>
                 </div>
                 <div class="slide-description">
-                  <h3 class="phrase">Худеем правильно!</h3>
+                  <h3 class="slider-number">02</h3>
+                    <h3 class="phrase">Худеем правильно!</h3>
                     <p class="description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
                     <div class="specifications">
-                    <span class="option">Без подзарядки</span>
-                    <span class="option-value">48 часов</span>
+                        <span class="option">Без подзарядки</span>
+                        <span class="option-value">48 часов</span>
                     </div>
                 </div>
                 <div class="slide-description">
-                  <h3 class="phrase">Делай селфи,как Бен Стиллер! </h3>
-                  <p class="description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
-                  <div class="specifications">
-                  <span class="option">Длина палки</span>
-                  <span class="option">8,5 м</span>
-                  <span class="option">Вес палки</span>
-                  <span class="option-value">5 кг</span>
-                  <span class="option">Материал</span>
-                  <span class="option-value">Карбон</span>
+                  <h3 class="slider-number">03</h3>
+                    <h3 class="phrase">Делай селфи,как Бен Стиллер!</h3>
+                    <p class="description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
+                    <div class="specifications">
+                        <span class="option">Длина палки</span>
+                        <span class="option">8,5 м</span>
+                        <span class="option">Вес палки</span>
+                        <span class="option-value">5 кг</span>
+                        <span class="option">Материал</span>
+                        <span class="option-value">Карбон</span>
+                    </div>
                 </div>
             </section>
             <section class="catalog-products">
@@ -142,22 +147,18 @@
                         </button>
                     </li>
                 </ol>
-                <div >
-                <h3 class="delivery">Доставка</h3>
-                <p class="delivery-home">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!
-                  Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
-                  </div>
-                  <div >
-                    <h3 class="delivery">Гарантия</h3>
-                    <p class="delivery-home">Если из-за возгорания купленного у нас товара у вас
-                      сгорит дом — не переживайте, мы выдадим вам новый.
-                      Товар, не дом, конечно же. </p>
-                      </div>
-                      <div >
-                        <h3 class="delivery">Кредит</h3>
-                        <p class="delivery-home">Залезть в долговую яму стало проще!
-                          Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
-                          </div>
+                <div>
+                    <h3 class="tab-title">Доставка</h3>
+                    <p class="tab-paragraph">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+                </div>
+                <div>
+                    <h3 class="tab-title">Гарантия</h3>
+                    <p class="tab-paragraph">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+                </div>
+                <div>
+                    <h3 class="tab-title">Кредит</h3>
+                    <p class="tab-paragraph">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
+                </div>
             </section>
             <section class="advantage">
                 <h2 class="order">Доставим редкий товар под заказ</h2>
@@ -217,7 +218,7 @@
             <section class="footer-contacts">
                 <h2 class="visually-hidden">Контакты</h2>
                 <a class="device-logo" href="index.html">
-                <img class="footer-contacts-logo" src="index.html" alt="Логотип Магазин «Девайс»" />
+                    <img class="footer-contacts-logo" src="#" alt="Логотип Магазин «Девайс»" />
                 </a>
                 <address class="footer-contacts-address">
                     <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
@@ -265,5 +266,4 @@
         </footer>
     </body>
 </html>
-
 
